<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/block1">
    </TextView>

    <TextView
        android:id="@+id/text2"
        android:padding="5dp"
        android:layout_below="@id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/block2">
    </TextView>

    <TextView
        android:id="@+id/text3"
        android:padding="5dp"
        android:layout_below="@id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/block3">
    </TextView>

    <TextView
        android:id="@+id/text4"
        android:padding="5dp"
        android:layout_below="@id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/block4">
    </TextView>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text4"
        android:text="Checked"
        android:onClick="checkboxClicked">
    </CheckBox>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:ems="13"
            android:inputType="text"
            android:hint="@string/insert1">
        </EditText>

        <Button
            android:id="@+id/btt1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button1"
            android:text="@string/btt1">
        </Button>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btt2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:onClick="button2"
            android:text="@string/btt2">
        </Button>

        <Button
            android:id="@+id/btt3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:text="@string/btt3"
            android:onClick="button3">
        </Button>

    </LinearLayout>

</RelativeLayout>